# Lakehouse_Plumber

./: .coverage  .dockerignore  .docs_revamp_state.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LLM.txt  README.md  SECURITY.md  TEMPLATE_QUOTING_INVESTIGATION.md  cov_cli_main.json  databricks.yml  dlt_reverse_engineering_research.md  docker-compose.yml  event_hooks_plugin_example.md  kafla-load-action.plan.md  liccheck.ini  metadata_columns_guide.md  plugin_implementation_todo.md  plugin_research_report.md  plugin_system_research.md  pyproject.toml  requirements-dev.txt  setup.py  vulture_whitelist.py
.claude/commands/: e2e-test.md  lhp-pipeline-builder.md  python-architect.md  test-driven-development.md
.claude/lhp/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-automerge.yml  docs.yml  publish.yml  python-app.yml  python_ci.yml  scorecard.yml  security.yml
Example_Projects/acmi/: .gitignore  .lhp_state.json  README.md  databricks.yml  lhp.yaml  regression_test.py
Example_Projects/new_project/: README.md  databricks.yml  lhp.yaml
Example_Projects/performance_testing/: generate_flowgroups.py  lhp.yaml
Example_Projects/streaming_datasource_example/: unitrate_full.py
Example_Projects/testing_project/: databricks.yml  lhp.yaml
Reference_Templates/: README_Reference_Templates.md  autoloader_avro_comprehensive.yaml  autoloader_aws_comprehensive.yaml  autoloader_azure_comprehensive.yaml  autoloader_binaryfile_comprehensive.yaml  autoloader_csv_comprehensive.yaml  autoloader_gcp_comprehensive.yaml  autoloader_json_comprehensive.yaml  autoloader_orc_comprehensive.yaml  autoloader_parquet_comprehensive.yaml  autoloader_text_comprehensive.yaml  autoloader_xml_comprehensive.yaml  example_with_all_dlt_options.yaml  kafka_event_hubs_oauth_template.yaml  kafka_msk_iam_template.yaml  kafka_streaming_template.yaml  snapshot_cdc_example.yaml  standard_ingestion.yaml  test_all_lookups_found.yaml  test_completeness.yaml  test_comprehensive_example.yaml  test_custom_expectations.yaml  test_custom_sql.yaml  test_range.yaml  test_referential_integrity.yaml  test_row_count.yaml  test_uniqueness.yaml  test_uniqueness_filtered.yaml
deploy/: DEPLOY_GUIDE.md  DEPLOY_LESSONS_LEARNED.md  app.yaml  databricks.yml  package.json  requirements.txt  start.py
deploy/resources/: lhp_app.yml
deploy/static/: index.html
docker/: ARCHITECTURE.md  QUICKSTART.md  entrypoint.sh
docs/: README.md  STYLE_GUIDE.md  actions_reference.rst  advanced.rst  api.rst  architecture.rst  best_practices.rst  blueprints.rst  blueprints_reference.rst  bundle_config_reference.rst  changelog.rst  cicd.rst  cicd_reference.rst  cli.rst  concepts.rst  conf.py  configure_bundles.rst  configure_catalog_schema.rst  data_contracts.rst  databricks_bundles.rst  decisions.rst  dependency_analysis.rst  develop_in_a_sandbox.rst  develop_in_the_web_ide.rst  dynamic_templates_guide.rst  editor_setup.rst  enable_monitoring.rst  errors_reference.rst  examples.rst  getting_started.rst  glossary.rst  how_to_index.rst  index.rst  ingest_with_autoloader.rst  migrate_from_dlt.rst  monitoring.rst  monitoring_reference.rst  multi_flowgroup_guide.rst  operational_metadata.rst  package_pipelines_as_wheels.rst  (+15 more)
docs/_build/: .buildinfo  actions_reference.html  advanced.html  api.html  cli.html  concepts.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
docs/actions/: index.rst  load_actions.rst  test_actions.rst  test_reporting.rst  transform_actions.rst  write_actions.rst
docs/best_practices/: environments.rst  governance.rst  index.rst  performance.rst  project_structure.rst  testing.rst
docs/concepts/: coding-agents-and-the-skill.rst  flowgroups-and-dependencies.rst  how-lhp-works.rst  index.rst  presets-templates-blueprints.rst  substitution-and-envs.rst  the-action-model.rst
docs/get-started/: 01-install-and-init.rst  01-install-and-scaffold.rst  02-configure-the-project.rst  02-your-first-pipeline.rst  03-explore-the-pipelines.rst  03-transform-and-quality.rst  04-generate-and-inspect.rst  04-reuse-with-presets.rst  05-deploy-and-run.rst  05-templates.rst  06-explore-lhp-web.rst  06-scale-with-blueprints.rst  07-deploy-with-bundles.rst  07-where-to-next.rst  index.rst
docs/guides/: index.rst
docs/refactoring/: orchestrator-refactoring-plan.md
docs/reference/: api.rst  changelog.rst  cli.rst  errors.rst  glossary.rst  index.rst
providers/: README.md  ado_test_reporter.py  ado_test_reporter_inline.py
scripts/: build_deploy.sh  build_webapp.sh  check_baseline_gates.sh  check_codegen_inline.py  check_docs.py  check_file_sizes.py  check_placement.py  check_stability_drift.py
tests/: README.md  TEST_SUMMARY.md  conftest.py  test_action_registry.py  test_action_validators_kafka.py  test_advanced_features.py  test_append_flow.py  test_base_generator.py  test_base_generator_import_manager.py  test_blueprint_cli.py  test_blueprint_discoverer.py  test_blueprint_expander.py  test_blueprint_flowgroup_discoverer.py  test_blueprint_orchestrator.py  test_blueprint_parser.py  test_blueprint_smart_generation.py  test_blueprint_state_integration.py  test_blueprint_use_syntax.py  test_blueprint_validate.py  test_blueprint_yaml_parser_b1.py  test_bundle_database_extraction.py  test_bundle_detection.py  test_bundle_environment.py  test_bundle_error_factories.py  test_bundle_error_handling.py  test_bundle_full_substitution.py  test_bundle_jinja2.py  test_bundle_manager.py  test_bundle_manager_catalog_schema_config.py  test_bundle_manager_simplified.py  test_bundle_preflight.py  test_cdc_fanin.py  test_cdc_table_creation.py  test_clean_architecture_layers.py  test_cli.py  test_cli.py1  test_cli_bundle_integration.py  test_cli_comprehensive.py  test_cli_deps_integration.py  test_cli_deps_job_config.py  (+187 more)
web_app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+6353 files in other folders)
