[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-plumber"
version = "0.8.8"
description = "A framework for building and managing enterprise Lakeflow Spark Declaritive Pipelines"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mehdi Modarressi", email = "modarressi.mehdi@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "rich-click>=1.9.0,<2.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.19.0",
    "jinja2>=3.0.0",
    "pydantic==2.12.0",
    "jsonschema>=4.26.0",
    "packaging>=23.2",
    "black>=26.3.1",
    "networkx>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "syrupy>=4.6.0",
    "flake8>=6.0.0",
    "black>=26.3.1",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "requests>=2.32.0",
    "pip-audit>=2.7.0",
    "bandit[sarif]>=1.7.0",
    "liccheck>=0.9.0",
    "pre-commit>=3.0.0",
    "build>=1.0",  # used by tests/test_packaging.py to build a wheel for package-data assertions
]

[project.urls]
Homepage = "https://github.com/Mmodarre/Lakehouse_Plumber"
Documentation = "https://lakehouse-plumber.readthedocs.io/"
Repository = "https://github.com/Mmodarre/Lakehouse_Plumber.git"
"Bug Tracker" = "https://github.com/Mmodarre/Lakehouse_Plumber/issues"

[project.scripts]
lhp = "lhp.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lhp.schemas" = ["*.json", "*.md"]
"lhp.templates" = ["*.j2"]
"lhp.templates.bundle" = ["*.j2"]
# triple glob defends against historical setuptools dotfile inclusion bug
"lhp.templates.init" = ["**/*", ".*", "**/.*"]
"lhp.templates.load" = ["*.j2"]
"lhp.templates.transform" = ["*.j2"]
"lhp.templates.write" = ["*.j2"]
"lhp.templates.write.sinks" = ["*.j2"]
"lhp.templates.test_reporting" = ["*.j2"]
"lhp.templates.monitoring" = ["*.py", "*.j2"]
"lhp.resources.skills.lhp" = ["*.md"]
"lhp.resources.skills.lhp.references" = ["*.md"]



[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
norecursedirs = ["tests/baselines"]
pythonpath = ["src", "."]  # "." needed so tests can `from tests.helpers import ...` / `from tests.fakes import ...`
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests (skipped in CI, run locally with '-m performance')",
]
filterwarnings = [
    # Phase 1 deprecation shims (architecture streamline). Removable after the
    # earliest minor-version window — see each shim's module docstring.
    "ignore:lhp.core.base_generator is deprecated:DeprecationWarning",
    "ignore:lhp.utils.operational_metadata is deprecated:DeprecationWarning",
    "ignore:lhp.utils.schema_parser is deprecated:DeprecationWarning",
    "ignore:lhp.utils.schema_transform_parser is deprecated:DeprecationWarning",
    # Phase 4: ``TestActionView`` is a public DTO in lhp.api.views whose
    # name happens to match pytest's class-collection heuristic. The
    # constructor signature differs from a test class so pytest already
    # skips it; suppress the informational warning.
    "ignore:cannot collect test class 'TestActionView':pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["lhp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 
[tool.importlinter]
root_packages = ["lhp"]

[[tool.importlinter.contracts]]
name = "Public API and internal modules must not import from CLI"
type = "forbidden"
source_modules = ["lhp.api", "lhp.core", "lhp.parsers", "lhp.generators", "lhp.bundle", "lhp.utils", "lhp.models"]
forbidden_modules = ["lhp.cli"]

[[tool.importlinter.contracts]]
name = "CLI must consume public API, not core.layers"
type = "forbidden"
source_modules = ["lhp.cli"]
forbidden_modules = ["lhp.core.layers"]

[[tool.importlinter.contracts]]
name = "LHP top-down layering"
type = "layers"
layers = [
    "lhp.cli",
    "lhp.bundle",
    "lhp.core",
    "lhp.generators : lhp.parsers : lhp.presets",
    "lhp.models",
    "lhp.utils",
]
# Phase 1 documented carve-outs. The constitution preamble's "Authority"
# clause says the constitution wins on conflicts. The conflict here is real
# and acknowledged in `LOCAL/phase_1_structural_foundation.md` (Amendment
# §A1): §7 Rule 10 requires the four deprecation shims to live for one
# minor version, but the layered contract forbids the upward edges those
# shims emit. The shim edges below are removable when the shims are
# removed (earliest v0.9.x). The two `generators -> core.services` edges
# survived deliverables 8–11 and are carried to Phase 4, which refactors
# OperationalMetadataService out of `core/services/`.
ignore_imports = [
    # Phase-1 shim edges — remove with the shims (v0.9.x+).
    "lhp.utils.operational_metadata -> lhp.core.services.operational_metadata",
    "lhp.utils.schema_parser -> lhp.parsers.schema_parser",
    "lhp.utils.schema_transform_parser -> lhp.parsers.schema_transform_parser",
    "lhp.core.base_generator -> lhp.generators._base",
    # Phase-4 refactor target.
    "lhp.generators._base -> lhp.core.services.operational_metadata_service",
    "lhp.generators.transform.quarantine -> lhp.core.services.operational_metadata_service",
]

[[tool.importlinter.contracts]]
name = "Models must not depend on higher layers"
type = "forbidden"
source_modules = ["lhp.models"]
forbidden_modules = ["lhp.cli", "lhp.bundle", "lhp.core", "lhp.generators", "lhp.parsers", "lhp.presets", "lhp.api"]

[[tool.importlinter.contracts]]
name = "Utils must depend only on stdlib (and at most models)"
type = "forbidden"
source_modules = ["lhp.utils"]
forbidden_modules = ["lhp.cli", "lhp.bundle", "lhp.core", "lhp.generators", "lhp.parsers", "lhp.presets", "lhp.api"]
# Phase-1 shim carve-out. See the layered contract above for the rationale.
ignore_imports = [
    "lhp.utils.operational_metadata -> lhp.core.services.operational_metadata",
    "lhp.utils.schema_parser -> lhp.parsers.schema_parser",
    "lhp.utils.schema_transform_parser -> lhp.parsers.schema_transform_parser",
]

[[tool.importlinter.contracts]]
name = "Generator families must not import each other directly"
type = "independence"
modules = ["lhp.generators.load", "lhp.generators.transform", "lhp.generators.write", "lhp.generators.test"]

[tool.mutmut]
paths_to_mutate = "src/lhp/core/secret_validator.py"
tests_dir = "tests/"

