[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-plumber"
version = "0.9.0"
description = "A framework for building and managing enterprise Lakeflow Spark Declaritive Pipelines"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mehdi Modarressi", email = "modarressi.mehdi@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "rich-click>=1.9.0,<2.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "jinja2>=3.0.0",
    "pydantic==2.12.0",
    "jsonschema>=4.26.0",
    "packaging>=23.2",
    "ruff>=0.13.3",
    "networkx>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "syrupy>=4.6.0",
    "flake8>=6.0.0",
    "black>=26.3.1",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "requests>=2.32.0",
    "pip-audit>=2.7.0",
    "bandit[sarif]>=1.7.0",
    "liccheck>=0.9.0",
    "pre-commit>=3.0.0",
    "build>=1.0",  # used by tests/test_packaging.py to build a wheel for package-data assertions
]

[project.urls]
Homepage = "https://github.com/Mmodarre/Lakehouse_Plumber"
Documentation = "https://lakehouse-plumber.readthedocs.io/"
Repository = "https://github.com/Mmodarre/Lakehouse_Plumber.git"
"Bug Tracker" = "https://github.com/Mmodarre/Lakehouse_Plumber/issues"

[project.scripts]
lhp = "lhp.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lhp" = ["py.typed"]
"lhp.schemas" = ["*.json", "*.md"]
"lhp.templates" = ["*.j2"]
"lhp.templates.bundle" = ["*.j2"]
# triple glob defends against historical setuptools dotfile inclusion bug
"lhp.templates.init" = ["**/*", ".*", "**/.*"]
"lhp.templates.load" = ["*.j2"]
"lhp.templates.transform" = ["*.j2"]
"lhp.templates.write" = ["*.j2"]
"lhp.templates.write.sinks" = ["*.j2"]
"lhp.templates.test" = ["*.j2"]
"lhp.templates.test_reporting" = ["*.j2"]
"lhp.templates.monitoring" = ["*.py", "*.j2"]
"lhp.resources.skills.lhp" = ["*.md"]
"lhp.resources.skills.lhp.references" = ["*.md"]



[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
norecursedirs = ["tests/baselines"]
pythonpath = ["src", "."]  # "." needed so tests can `from tests.helpers import ...` / `from tests.fakes import ...`
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests (skipped in CI, run locally with '-m performance')",
]
filterwarnings = [
    # Phase 1 deprecation shims (architecture streamline). Removable after the
    # earliest minor-version window — see each shim's module docstring.
    "ignore:lhp.core.base_generator is deprecated:DeprecationWarning",
    # Phase 4: ``TestActionView`` is a public DTO in lhp.api.views whose
    # name happens to match pytest's class-collection heuristic. The
    # constructor signature differs from a test class so pytest already
    # skips it; suppress the informational warning.
    "ignore:cannot collect test class 'TestActionView':pytest.PytestCollectionWarning",
    # ``TestActionValidator`` is the action validator in lhp.core.validators
    # whose name happens to match pytest's class-collection heuristic. It has
    # an ``__init__`` constructor so pytest already skips it; suppress the
    # informational warning.
    "ignore:cannot collect test class 'TestActionValidator':pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# ``target-version`` is a TOP-LEVEL ``[tool.ruff]`` key per the ruff config
# schema (NOT a ``[tool.ruff.format]`` key — that section holds format-only
# options like ``quote-style``). py311 corrects the stale Black PY38 baseline.
# NOTE: this governs LHP's OWN repo tooling. The generated-output terminal
# formatting pass runs ``ruff format`` inside the USER's project dir, where
# ruff discovers the USER's config — so T5.2 must pass config EXPLICITLY on
# that invocation to keep generated formatting deterministic and LHP-controlled.
target-version = "py311"
extend-exclude = [
    "tests/fixtures/import_manager/invalid_syntax.py",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["lhp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
[tool.importlinter]
root_packages = ["lhp"]

[[tool.importlinter.contracts]]
name = "Public API and internal modules must not import from CLI"
type = "forbidden"
source_modules = ["lhp.api", "lhp.core", "lhp.parsers", "lhp.generators", "lhp.bundle", "lhp.utils", "lhp.models"]
forbidden_modules = ["lhp.cli"]

[[tool.importlinter.contracts]]
name = "CLI must consume public API only, never internal domain modules"
type = "forbidden"
source_modules = ["lhp.cli"]
forbidden_modules = [
    "lhp.core",
    "lhp.bundle",
    "lhp.parsers",
    "lhp.models",
    "lhp.generators",
]
# Only flag DIRECT imports — transitive chains through ``lhp.api``
# are by design (the public API is the one allowed bridge into
# domain modules per §5.3).
allow_indirect_imports = "true"

# LHP top-down layering. ``generators`` sits ABOVE ``core`` because the
# per-action generators inherit from ``BaseActionGenerator`` in
# ``lhp.core.registry`` — those 17 former carve-outs are now legal downward
# edges and have been removed. To make this hold, ``core`` was decoupled from
# ``generators`` (the reverse edge): ``python_file_copier`` moved into ``core``
# and ``ActionRegistry`` is now populated by ``lhp.generators.registration``
# (wired in at the composition root) instead of importing the families.
# ``presets`` and ``parsers`` are core's DEPENDENCIES, so they sit BELOW
# ``core`` (``presets`` above ``parsers`` because ``presets`` imports it);
# ``errors`` sits below ``models`` because ``models`` imports ``errors``.
# ``lhp.api`` is a single public surface above ``core``; ``core`` no longer
# imports ``api`` (ValidationService returns the internal ``ValidationError``
# and ``BaseWarningCollector`` lives in ``core/_interfaces.py``). See the
# "Layering contract redesign V2" CHANGELOG entry for the full rationale.
[[tool.importlinter.contracts]]
name = "LHP top-down layering"
type = "layers"
layers = [
    "lhp.cli",
    "lhp.api",
    "lhp.bundle",
    "lhp.generators",
    "lhp.core",
    "lhp.presets",
    "lhp.parsers",
    "lhp.models",
    "lhp.errors",
    "lhp.utils",
]

[[tool.importlinter.contracts]]
name = "Models must not depend on higher layers"
type = "forbidden"
source_modules = ["lhp.models"]
forbidden_modules = ["lhp.cli", "lhp.bundle", "lhp.core", "lhp.generators", "lhp.parsers", "lhp.presets", "lhp.api"]

[[tool.importlinter.contracts]]
name = "Utils must depend only on stdlib (and at most models)"
type = "forbidden"
source_modules = ["lhp.utils"]
forbidden_modules = ["lhp.cli", "lhp.bundle", "lhp.core", "lhp.generators", "lhp.parsers", "lhp.presets", "lhp.api"]

[[tool.importlinter.contracts]]
name = "Generator families must not import each other directly"
type = "independence"
modules = ["lhp.generators.load", "lhp.generators.transform", "lhp.generators.write", "lhp.generators.test"]
# The families never import each other directly. They are wired into the core
# ``ActionRegistry`` from ``lhp.generators.registration`` (the composition
# root), which is not one of the four family modules, so the independence
# contract holds with no carve-outs.

[tool.mutmut]
paths_to_mutate = "src/lhp/core/secret_validator.py"
tests_dir = "tests/"

[tool.vulture]
# Dead-code detection. See vulture_whitelist.py for triaged false positives.
# Run: vulture src/lhp/ vulture_whitelist.py --min-confidence 80
paths = ["src/lhp/", "vulture_whitelist.py"]
min_confidence = 80
sort_by_size = true
